--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,7 @@ requires-python = "~=3.8"
 classifiers = [
   'Programming Language :: Python :: 3',
 ]
-dependencies = [
-]
+dependencies = []
 
 [project.optional-dependencies]
 test = [
@@ -57,6 +56,6 @@ exclude_lines = [
 ]
 
 [tool.semantic_release]
-version_variables = ['smartcall/__init__.py:__version__']
+version_variables = ['smartcall.py:__version__']
 build_command = 'python -m pip install build && python -m build'
 major_on_zero = false
