--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,6 +3,8 @@ name: Test
 on:
   push:
   pull_request:
+    branches:
+    - master
 
 jobs:
 
@@ -23,7 +25,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ['3.8', '3.x']
+        python-version: ['3.10', '3.x']
 
     steps:
       - uses: actions/checkout@v4
@@ -40,9 +42,10 @@ jobs:
       - name: Store coverage data
         uses: actions/upload-artifact@v4
         with:
-          name: coverage-data-${{ matrix.python-version }}
+          name: coverage-data-${{ matrix.operating-system }}-${{ matrix.python-version }}
           path: .coverage.*
-          if-no-files-found: ignore
+          include-hidden-files: true
+          if-no-files-found: error
 
   coverage:
     name: Report coverage
@@ -53,7 +56,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.8'
+          python-version: '3.10'
       - run: |
           python -m pip install --upgrade pip
           python -m pip install coverage[toml]
