--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,11 @@ name: Test
 
 on:
   push:
+    branches:
+    - master
   pull_request:
+    branches:
+    - master
 
 jobs:
 
@@ -40,9 +44,10 @@ jobs:
       - name: Store coverage data
         uses: actions/upload-artifact@v4
         with:
-          name: coverage-data-${{ matrix.python-version }}
+          name: coverage-data-${{ matrix.operating-system }}-${{ matrix.python-version }}
           path: .coverage.*
-          if-no-files-found: ignore
+          include-hidden-files: true
+          if-no-files-found: error
 
   coverage:
     name: Report coverage
