--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -6,7 +6,9 @@ version: 2
 build:
   os: ubuntu-22.04
   tools:
-    python: '3.8'
+    python: '3.10'
+sphinx:
+  configuration: docs/conf.py
 
 # How to install the project.  We need to specify to use `pip`, because 
 # otherwise RTD may try to directly execute `setup.py`, which doesn't exist.
